# SpaceGlider

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: README.md
injector/: CMakeLists.txt  README.md  main.cpp
internal/: CMakeLists.txt  CharacterData.h  Console.cpp  Console.h  Constants.h  D3DRenderer.h  Decrypt.cpp  DelayedAction.cpp  DelayedAction.h  Enums.h  Evade.cpp  Evade.h  EventManager.h  Geometry.h  Hooks.h  ImRender.cpp  ImRender.h  LeagueFunctions.cpp  LeagueFunctions.h  Menu.cpp  Menu.h  ModuleLoader.cpp  ModuleLoader.h  ObjectManager.h  Offsets.h  OrbWalker.cpp  OrbWalker.h  README.md  SpellBase.cpp  SpellBase.h  Structs.h  TargetSelector.h  UltimateHooks.cpp  UltimateHooks.h  Utils.h  Vector.cpp  Vector.h  dllmain.cpp  moduleManager.h
internal/BuffManager/: BuffManager.cpp  BuffManager.h
internal/ConfigManager/: Config.cpp  Config.h
internal/Console/: Console.h
internal/Decrypt/: Decrypt.cpp  Decrypt.h
internal/DelayedAction/: DelayedAction.cpp  DelayedAction.h
internal/Evade/: Evade.cpp  Evade.h
internal/EventManager/: EventManager.h
internal/Geometry/: Geometry.h
internal/Hooks/: Hooks.h  UltimateHooks.cpp  UltimateHooks.h
internal/LeagueFunctions/: LeagueFunctions.cpp  LeagueFunctions.h
internal/ModuleLoader/: ModuleLoader.cpp  ModuleLoader.h
internal/ObjectManager/: ObjectManager.h
internal/OrbWalker/: OrbWalker.cpp  OrbWalker.h
internal/Patchables/: CharacterData.h  Offsets.h  Structs.h
internal/Plugins/: PluginLoader.h
internal/Plugins/Prediction/: Health.cpp  Health.h
internal/Plugins/Utilities/: WaypointTracker.h
internal/Rendering/: D3DRenderer.cpp  D3DRenderer.h  ImRender.cpp  ImRender.h  Menu.cpp  Menu.h
internal/Security/: AntiDetection.cpp  AntiDetection.h
internal/SpellInstance/: Spellbase.cpp  Spellbase.h
internal/TargetSelector/: TargetSelector.cpp  TargetSelector.h
internal/Utils/: Helper.cpp  Helper.h  Utils.cpp  Utils.h
internal/libraries/: boolinq.h
league-dumper/: CMakeLists.txt  README.md  dllmain.cpp  dump_process.cpp  dump_process.h  export_list.h  hash.cpp  hash.h  module_list.h  pd.cpp  pd.vcproj  pe_exports.h  pe_hash_database.cpp  pe_hash_database.h  pe_header.cpp  pe_header.h  pe_imports.cpp  pe_imports.h  stream_wrapper.h  terminate_monitor_hook.h  utils.h  work_queue.h
libraries/: CMakeLists.txt
libraries/DirectSysCalls/: makesyscall.h
libraries/HookLib/: Hooks.cpp  Hooks.h
libraries/ImGui/: CMakeLists.txt
libraries/MSDetours/: CMakeLists.txt
libraries/Memory/: CMakeLists.txt  Memory.h
libraries/MemoryLib/: Memory.h
libraries/Offsets/: Offsets.h
libraries/Zydis/: CMakeLists.txt
processdumper/: CMakeLists.txt  close_watcher.cpp  close_watcher.h  export_list.cpp  module_list.cpp  pe_exports.cpp  simple.cpp  simple.h  stdafx.cpp  terminate_monitor_hook.cpp
pytools/: README.md  pytools.py
unban/: CMakeLists.txt  main.cpp
