cmake_minimum_required (VERSION 3.16)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
	set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/Release )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/Release )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/Release )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
project(SpaceGlider)
add_subdirectory(libraries)
add_subdirectory(internal)
add_subdirectory(injector)
add_subdirectory(unban)
add_subdirectory(processdumper)