project(SpaceGlider)
add_definitions(-DUNICODE -D_UNICODE)
add_definitions(-D_SILENCE_EXPERIMENTAL_FILESYSTEM_DEPRECATION_WARNING -D_SILENCE_EXPERIMENTAL_FILESYSTEM_DEPRECATION_WARNING)
file(GLOB zydis_src
       ${CMAKE_SOURCE_DIR}/libraries/Zydis/*.h
       ${CMAKE_SOURCE_DIR}/libraries/Zydis/Zydis/src/*.c)
file(GLOB_RECURSE core_sources "*.h" "*.cpp")
add_library(${PROJECT_NAME} SHARED ${core_sources} ${zydis_src})
include_directories($ENV{DXSDK_DIR}/Include)
target_link_directories(${PROJECT_NAME} PUBLIC "$ENV{DXSDK_DIR}/Lib/x86")
target_link_libraries(${PROJECT_NAME} PUBLIC ImGui MSDetours Dbghelp.lib d3d9.lib d3dx9.lib)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/libraries/Zydis)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/libraries/Zydis/Zydis/src)
foreach(_source IN ITEMS ${core_sources})
    get_filename_component(_source_path "${_source}" PATH)
    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _group_path "${_source_path}")
    string(REPLACE "/" "\\" _group_path "${_group_path}")
    source_group("${_group_path}" FILES "${_source}")
endforeach()
foreach(_source IN ITEMS ${zydis_src})
    get_filename_component(_source_path "${_source}" PATH)
    string(REPLACE "${CMAKE_SOURCE_DIR}" "" _group_path "${_source_path}")
    string(REPLACE "/" "\\" _group_path "${_group_path}")
    source_group("${_group_path}" FILES "${_source}")
endforeach()